# aws-lambda-rust-runtime

./: .env  .gitignore  Dockerfile.test  Makefile  README.md  release-plz.toml
.github/workflows/: dockerized-test.yml
examples/advanced-appconfig-feature-flags/cdk/: package-lock.json  package.json
examples/basic-lambda-concurrent-s3/: Cargo.toml
examples/basic-lambda-concurrent-s3/src/: main.rs
examples/extension-telemetry-generic/: Cargo.toml
examples/extension-telemetry-generic/src/: main.rs
examples/http-axum/cdk/: package-lock.json  package.json
lambda-events/: Cargo.toml
lambda-events/src/: lib.rs  time_window.rs
lambda-events/src/custom_serde/: mod.rs
lambda-events/src/event/activemq/: mod.rs
lambda-events/src/event/alb/: mod.rs
lambda-events/src/event/apigw/: mod.rs
lambda-events/src/event/appsync/: mod.rs
lambda-events/src/event/autoscaling/: mod.rs
lambda-events/src/event/cloudwatch_events/: gamelift.rs
lambda-events/src/event/code_commit/: mod.rs
lambda-events/src/event/cognito/: mod.rs
lambda-events/src/event/connect/: mod.rs
lambda-events/src/event/dynamodb/: mod.rs
lambda-events/src/event/firehose/: mod.rs
lambda-events/src/event/iot_1_click/: mod.rs
lambda-events/src/event/kafka/: mod.rs
lambda-events/src/event/lambda_function_urls/: mod.rs
lambda-events/src/event/lex/: mod.rs
lambda-events/src/event/rabbitmq/: mod.rs
lambda-events/src/event/s3/: event.rs
lambda-events/src/event/sns/: mod.rs
lambda-events/src/event/sqs/: mod.rs
lambda-events/src/event/vpc_lattice/: v1.rs  v2.rs
lambda-events/src/fixtures/: example-activemq-event-null-properties.json  example-apigw-v2-custom-authorizer-v2-request-null-maps.json  example-cognito-event-userpools-migrateuser-null-fields.json  example-cognito-event-userpools-pretokengen-null-group-configuration.json  example-cognito-event-userpools-pretokengen-v2-null-group-configuration.json  example-dynamodb-event-null-items.json  mod.rs
lambda-extension/src/: extension.rs  telemetry.rs
lambda-http/: Cargo.toml  README.md
lambda-http/src/: deserializer.rs  lib.rs  request.rs  response.rs
lambda-http/tests/data/: vpc_lattice_v2_request.json  vpc_lattice_v2_request_base64.json  vpc_lattice_v2_request_encoded_query.json
scripts/: build-examples.sh  custom-lambda-entrypoint.sh  test-rie.sh
test/dockerized/suites/: core.json
